{{$NEXT}}

0.4.6  2023-04-15T06:06:29+12:00
    - Add empty libfreetype.so and .dylib resources to fix installation
      on Linux and Windows.

0.4.5  2023-04-14T15:31:58+12:00
    - Add Windows support. Use pre-built DLLs courtesy of
      https://github.com/ubawurinna/freetype-windows-binaries

0.4.4  2023-04-06T06:06:08+12:00
    - Add face methods forall-glyph-images() and forall-char-images().
      These are similar to forall-glyphs() and forall-chars() except they
      return Font::FreeType::GlyphImage rather than Font::FreeType::Glyph.

0.4.3  2022-10-31T09:42:26+13:00
    - Add face is-internally-keyed-cid() method (for use by
      PDF::Font::Loader)

0.4.2  2022-06-21T09:25:39+12:00
    - The Font::FreeType::Outline bbox method now returns a
      Font::FreeType::BBox object rather than a raw FT_BBox.
    - The following Font::FreeType::Face methods now return
      Int:U rather than Mu for unscaleable fonts: units-per-em,
      underline-position, underline-thickness, ascender, descender
    - Also added return types for various other methods.

0.4.1  2022-05-19T07:04:46+12:00
    - Modify forall-chars() and forall-glyphs() to perform protected calls
    - Deprecate face iterate-chars() and iterate-glyphs() methods in
      favor if forall-chars(), forall-glyphs(). The latter are now
      locked for thread-safety.

0.4.0  2022-05-18T09:17:23+12:00
    - Add face lock() attribute. Use it to protect iterate-chars() and
      iterate-glyphs() and face update methods for improved thread-safety
    - Change from CPAN to zef repository

0.3.11  2022-02-15T05:39:32+13:00
    - Fix failing tests in Rakudo 2022.02

0.3.10  2022-02-04T07:55:53+13:00
    - Fix test for pending Rakudo 2022.02 release; niner++

0.3.9  2022-02-02T12:05:34+13:00
    - Add Pointer coercement. For the benefit of FontConfig's query-ft-face()
      method
    - Tweaks to Build.pm6 and Makiefile.in

0.3.8  2021-07-02T13:22:29+12:00
    - Add $face.index-from-glyph-name() method